# docstats

./: .gitignore  AGENTS.md  CLAUDE.md.bak.20260426-190249  README.md  pyproject.toml  railpack.json  railway.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
brand/: generate_logo.py  philosophy.md  preview.html
docs/: api-v2.md  attachments.md  csv-import-schema.md  delivery.md  direct-trust-vendor-comparison.md  fax-delivery.md  fhir-mapping.md  security-audit.md
docs/compliance/: README.md  baa-register.md  dr-drills.md  dr-runbook.md  encryption.md  risk-assessment-2026.md
docs/migrations/: 001_audit_events.sql  002_orgs_memberships.sql  003_sessions.sql  004_phi_consent.sql  005_fix_slug_unique.sql  006_patients.sql  007_referrals.sql  008_referral_clinical.sql  009_referral_responses.sql  010_reference_data.sql  011_csv_imports.sql  012_organization_invitations.sql  013_organization_stale_threshold.sql  014_webhook_inbox.sql  015_delivery_tables.sql  016_share_tokens.sql  017_attachment_retention.sql  018_eligibility_checks.sql  019_referral_eligibility_fk.sql  020_availity_payers.sql  021_staff_access_grants.sql  022_ehr_connections.sql  022_prior_auth_submissions.sql  023_ehr_connections_unique.sql  024_ehr_cerner_vendor.sql  024_patients_ehr_fhir_id.sql  025_referrals_ehr_service_request_id.sql  026_user_signature_fields.sql  027_referral_authorization_fields.sql  028_user_account_type.sql  029_prior_auth_submissions.sql  030_saved_providers_visit_location_type.sql  031_patients_relationship.sql  032_family_links.sql  033_ehr_org_connections.sql  034_insurance_plans_shared_with_family.sql  035_family_links_dependent_upgrade.sql  036_insurance_plans_cloned_from.sql  037_referral_ehr_status_poll.sql  038_ehr_connections_patient_id.sql
docs/templates/: hisp-outreach.md
src/docstats/: __init__.py  __main__.py  auth.py  cache.py  (+25 more)
tests/: conftest.py  test_account_type_signup.py  test_admin_audit.py  test_admin_deliveries.py  test_admin_members.py  test_admin_org_settings.py  test_admin_payer_rules.py  test_admin_routes.py  test_admin_specialty_rules.py  test_api.py  test_api_v2.py  test_attachments.py  test_audit.py  test_auth.py  test_availity_client.py  test_availity_prior_auth.py  test_client.py  test_cms_client.py  test_concurrency.py  test_csv_imports.py  test_deliveries.py  test_delivery_routes.py  test_dependent_upgrade.py  test_direct_delivery.py  test_ehr_pick_writeback_connection.py  test_ehr_redox_routes.py  test_ehr_routes.py  test_ehr_routes_patient.py  test_ehr_storage.py  test_ehr_storage_patient.py  test_ehr_storage_redox.py  test_ehr_writeback_picks_patient_conn.py  test_eligibility_routes.py  test_enrichment.py  test_export.py  test_exports.py  test_family_plan_sharing.py  test_fax_delivery.py  test_formatting.py  test_http_retry.py  (+40 more)
(+209 files in other folders)
