[project]
name = "docstats"
version = "0.1.0"
description = "Local-first NPI Registry lookup tool for HMO referral workflows"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
docstats = "docstats.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docstats"]

[project.optional-dependencies]
web = ["fastapi>=0.115", "jinja2>=3.1", "uvicorn[standard]>=0.30", "passlib[bcrypt]>=1.7.4", "bcrypt>=3.2.0,<4.0.0", "itsdangerous>=2.1.2", "python-multipart>=0.0.9", "supabase>=2.0,<3"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-httpx>=0.30", "ruff>=0.4"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]
# Pydantic v2 @computed_field stacked on @property is the documented pattern;
# mypy's prop-decorator check does not understand it. See pydantic/pydantic#3644.
disable_error_code = ["prop-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
